--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "node": ">=0.8.0"
   },
   "devDependencies": {
-    "babel-core": "^5.5.6",
+    "babel-core": "^6.0.0",
     "gulp-babel": "^6.1.0",
-    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-es2015": "^6.0.14",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-cache": "^0.2.8",
@@ -28,7 +28,8 @@
     "gulp-zip": "^3.0.2",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.1.4",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "babel-cli": "~6.6.0"
   },
   "eslintConfig": {
     "env": {
